<resources>
    <string name="app_name">NovoApp</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="password">Senha</string>
    <string name="apod">Astronomy Picture of the Day</string>

    <string name="salvar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>